# polaroids-for-mom

./: .gitignore  LICENSE  README.md
pipeline/: .gitignore  pyproject.toml
pipeline/polaroids/: __main__.py  cli.py  config.py
pipeline/polaroids/commands/: ingest.py  status.py
pipeline/polaroids/core/: db.py  exif.py  facebook_sidecar.py  hashing.py  heic.py  ingest_core.py  walker.py
pipeline/tests/: conftest.py  test_cli.py  test_db.py  test_exif.py  test_facebook_sidecar.py  test_hashing.py  test_heic.py  test_ingest_drive.py  test_ingest_idempotent.py  test_ingest_metadata.py  test_walker.py
pipeline/tests/fixtures/: sidecar_minimal.json  sidecar_multi_photo.json
runtime/PolaroidsSaver/WebViewScreenSaver/: WebViewScreenSaverView.m
runtime/PolaroidsSaver/WebViewScreenSaver/Resources/web/: index.html
runtime/PolaroidsSaver/WebViewScreenSaver/WebViewScreenSaver.xcodeproj/: project.pbxproj
runtime/web/: index.html
runtime/web/css/: fonts.css  main.css
runtime/web/js/: bundle.js  camera-path.js  camera-zoom.js  caption-baker.js  captions-data.js  config-overrides.js  config.js  deck.js  frame-loop.js  lights.js  main.js  photo-manifest.js  photos-data.example.js  photos-data.js  polaroid.js  renderer.js  scatter-layout.js  scatter.js  scene.js  table.js  tabletop-data.js  tape.js  texture-cache.js  wood-texture.js  zoom-scheduler.js
scripts/: build.sh  install.sh  refresh-photos.sh  verify-gate-02.sh
ship/: Change Tabletop.command  Install (Terminal fallback).command  README.md  Refresh Photos.command  install-polaroids.applescript
